# learn_fastapi

./: auto_loader.py  deprecation.py  main.py  main2.py  main3.py  main4.py  pyproject.toml
src1/: book_data.py  routers.py  schemas.py
src2/: config.py  idea.txt
src2/books/: models.py  routers.py  schemas.py  services.py
src2/db/: __init__.py  main.py
