[project]
name = "learn-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.33",
    "typing>=3.10.0.0",
    "uvicorn>=0.40.0",
]
